Backend tested, debugged and fully functional

--- a/TODOList.API/appsettings.json
+++ b/TODOList.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "TodoListConnectionString": "Server=localhost\\MSSQLSERVER01;Database=TodoListDb;Trusted_Connection=True;TrustServerCertificate=True"
+  } 
 }
