--- a/TODOList.API/appsettings.Development.json
+++ b/TODOList.API/appsettings.Development.json
@@ -5,8 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "TodoListConnectionString": "Server=<INSERT_SERVERNAME>;Database=TodoListDb;TrustedConnection=True;TrustServerCertificate=True"
-  }
+  "AllowedHosts": "*"
 }
