Add Many to Many Relationship on TODO and Category

--- a/TODOList.API/appsettings.json
+++ b/TODOList.API/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "TodoListConnectionString": "Server=localhost\\MSSQLSERVER01;Database=TodoListDb;Trusted_Connection=True;TrustServerCertificate=True"
-  } 
+    "TodoListConnectionString": "Server=localhost;Database=TodoListDb;Trusted_Connection=True;TrustServerCertificate=True"
+  }
 }
